// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canvas adjusts the height when updating dimensions 1`] = `
<body>
  <div
    id="get-started-modal"
  >
    <div
      data-use-vue-component-wrap=""
      style="position: relative; z-index: 1000;"
    >
      <div
        class="unnnic-modal type-alert show-actions-area"
        data-passed-props="[object Object]"
        data-v-73d9abf1=""
      >
        <div
          class="container"
          data-v-73d9abf1=""
        >
          <!---->
          <div
            class="content"
            data-v-73d9abf1=""
          >
            <!---->
            <div
              class="title"
              data-v-73d9abf1=""
            >
              Let's get started
            </div>
            <div
              class="description"
              data-v-73d9abf1=""
            >
              We recommend starting your flow by sending a message. This message will be sent to anyone who joins your flow. This is your chance to send a message or ask a question.
            </div>
            <!---->
            <div
              class="actions"
              data-v-73d9abf1=""
            >
              <button
                class="unnnic-button unnnic-button--size-large unnnic-button--terciary unnnic-button-scheme--"
                data-v-00f478da=""
                data-v-73d9abf1=""
              >
                <!---->
                <!---->
                <!---->
                <span
                  class="unnnic-button__label"
                  data-v-00f478da=""
                >
                   Later   
                </span>
                <!---->
              </button>
              <button
                class="unnnic-button unnnic-button--size-large unnnic-button--secondary unnnic-button-scheme--"
                data-v-00f478da=""
                data-v-73d9abf1=""
              >
                <!---->
                <!---->
                <!---->
                <span
                  class="unnnic-button__label"
                  data-v-00f478da=""
                >
                   Create message   
                </span>
                <!---->
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="canvas_container"
      id="canvas-container"
    >
      <div
        class="canvas_background"
      >
        <div
          class="sidebar"
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-tooltip"
              data-passed-props="[object Object]"
              data-v-0c4b479e=""
            >
              <div
                __use_react_component_wrap=""
                data-v-0c4b479e=""
                style="all: unset;"
              >
                <div
                  class="option"
                >
                  <div
                    data-use-vue-component-wrap=""
                    style="all: unset;"
                  >
                    <div
                      id="__vue_wrapper_container_6395351805897482"
                    />
                  </div>
                </div>
              </div>
              <span
                class="unnnic-tooltip-label unnnic-tooltip-label-right"
                data-v-0c4b479e=""
              >
                 Create block 
                <br
                  data-v-0c4b479e=""
                />
              </span>
            </div>
          </div>
        </div>
        <div
          class="canvas"
          data-testid="canvas"
          id="canvas"
          style="height: 1700px;"
        >
          <div />
          <div
            class="draggable"
            data-testid="draggable_132de855-4042-4dc1-a18f-cc2e6a8f790a"
            style="left: 100px; top: 1200px;"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Canvas initializes the height to the lowest draggable 1`] = `
<body>
  <div
    id="get-started-modal"
  >
    <div
      data-use-vue-component-wrap=""
      style="position: relative; z-index: 1000;"
    >
      <div
        class="unnnic-modal type-alert show-actions-area"
        data-passed-props="[object Object]"
        data-v-73d9abf1=""
      >
        <div
          class="container"
          data-v-73d9abf1=""
        >
          <!---->
          <div
            class="content"
            data-v-73d9abf1=""
          >
            <!---->
            <div
              class="title"
              data-v-73d9abf1=""
            >
              Let's get started
            </div>
            <div
              class="description"
              data-v-73d9abf1=""
            >
              We recommend starting your flow by sending a message. This message will be sent to anyone who joins your flow. This is your chance to send a message or ask a question.
            </div>
            <!---->
            <div
              class="actions"
              data-v-73d9abf1=""
            >
              <button
                class="unnnic-button unnnic-button--size-large unnnic-button--terciary unnnic-button-scheme--"
                data-v-00f478da=""
                data-v-73d9abf1=""
              >
                <!---->
                <!---->
                <!---->
                <span
                  class="unnnic-button__label"
                  data-v-00f478da=""
                >
                   Later   
                </span>
                <!---->
              </button>
              <button
                class="unnnic-button unnnic-button--size-large unnnic-button--secondary unnnic-button-scheme--"
                data-v-00f478da=""
                data-v-73d9abf1=""
              >
                <!---->
                <!---->
                <!---->
                <span
                  class="unnnic-button__label"
                  data-v-00f478da=""
                >
                   Create message   
                </span>
                <!---->
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="canvas_container"
      id="canvas-container"
    >
      <div
        class="canvas_background"
      >
        <div
          class="sidebar"
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-tooltip"
              data-passed-props="[object Object]"
              data-v-0c4b479e=""
            >
              <div
                __use_react_component_wrap=""
                data-v-0c4b479e=""
                style="all: unset;"
              >
                <div
                  class="option"
                >
                  <div
                    data-use-vue-component-wrap=""
                    style="all: unset;"
                  >
                    <div
                      id="__vue_wrapper_container_7435376777739029"
                    />
                  </div>
                </div>
              </div>
              <span
                class="unnnic-tooltip-label unnnic-tooltip-label-right"
                data-v-0c4b479e=""
              >
                 Create block 
                <br
                  data-v-0c4b479e=""
                />
              </span>
            </div>
          </div>
        </div>
        <div
          class="canvas"
          data-testid="canvas"
          id="canvas"
          style="height: 1590px;"
        >
          <div />
          <div
            class="draggable"
            data-testid="draggable_1e47a1e1-3c67-4df5-adf1-da542c789adb"
            style="left: 100px; top: 1200px;"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Canvas reflows collisions 1`] = `
Array [
  Array [
    "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
  ],
]
`;

exports[`Canvas render default 1`] = `
<body>
  <div>
    <div
      class="canvas_container"
      id="canvas-container"
    >
      <div
        class="canvas_background"
      >
        <div
          class="sidebar"
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-tooltip"
              data-passed-props="[object Object]"
              data-v-0c4b479e=""
            >
              <div
                __use_react_component_wrap=""
                data-v-0c4b479e=""
                style="all: unset;"
              >
                <div
                  class="option"
                >
                  <div
                    data-use-vue-component-wrap=""
                    style="all: unset;"
                  >
                    <div
                      id="__vue_wrapper_container_13062796432911639"
                    />
                  </div>
                </div>
              </div>
              <span
                class="unnnic-tooltip-label unnnic-tooltip-label-right"
                data-v-0c4b479e=""
              >
                 Create block 
                <br
                  data-v-0c4b479e=""
                />
              </span>
            </div>
          </div>
        </div>
        <div
          class="canvas"
          data-testid="canvas"
          id="canvas"
          style="height: 0px;"
        >
          <div />
        </div>
      </div>
    </div>
  </div>
  <div
    id="get-started-modal"
  >
    <div
      data-use-vue-component-wrap=""
      style="position: relative; z-index: 1000;"
    >
      <div
        class="unnnic-modal type-alert show-actions-area"
        data-passed-props="[object Object]"
        data-v-73d9abf1=""
      >
        <div
          class="container"
          data-v-73d9abf1=""
        >
          <!---->
          <div
            class="content"
            data-v-73d9abf1=""
          >
            <!---->
            <div
              class="title"
              data-v-73d9abf1=""
            >
              Let's get started
            </div>
            <div
              class="description"
              data-v-73d9abf1=""
            >
              We recommend starting your flow by sending a message. This message will be sent to anyone who joins your flow. This is your chance to send a message or ask a question.
            </div>
            <!---->
            <div
              class="actions"
              data-v-73d9abf1=""
            >
              <button
                class="unnnic-button unnnic-button--size-large unnnic-button--terciary unnnic-button-scheme--"
                data-v-00f478da=""
                data-v-73d9abf1=""
              >
                <!---->
                <!---->
                <!---->
                <span
                  class="unnnic-button__label"
                  data-v-00f478da=""
                >
                   Later   
                </span>
                <!---->
              </button>
              <button
                class="unnnic-button unnnic-button--size-large unnnic-button--secondary unnnic-button-scheme--"
                data-v-00f478da=""
                data-v-73d9abf1=""
              >
                <!---->
                <!---->
                <!---->
                <span
                  class="unnnic-button__label"
                  data-v-00f478da=""
                >
                   Create message   
                </span>
                <!---->
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
